Completely remove reliance on JUnit5 in favour of JQwik